Code quality: fixed error 'Number constructor call with primitive argument'